cmake_minimum_required (VERSION 2.6)

project (SimpleSocket)

LINK_DIRECTORIES (${CMAKE_SOURCE_DIR}/lib)

set (CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

set (CMAKE_DEBUG_POSTFIX "_d")

add_subdirectory(src bin)



